Remove unused classes