@@ -11,12 +11,12 @@ import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.Cour
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.DocumentaryShortTexts;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.FrbrDate;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.FrbrElement;
+import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.ImplicitReference;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.JaxbHtml;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.Judgment;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.JudgmentBody;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.Meta;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.OtherAnalysis;
-import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.RelatedDecision;
 import de.bund.digitalservice.ris.search.caselawhandover.shared.caselawldml.RisMeta;
 import de.bund.digitalservice.ris.search.exception.OpenSearchMapperException;
 import de.bund.digitalservice.ris.search.models.opensearch.CaseLawDocumentationUnit;
@@ -27,11 +27,10 @@ import jakarta.xml.bind.JAXB;
 import jakarta.xml.bind.ValidationException;
 import java.io.StringReader;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.xml.transform.stream.StreamSource;
 import org.eclipse.persistence.exceptions.DescriptorException;
 import org.springframework.stereotype.Service;
@@ -83,7 +82,7 @@ public class CaseLawLdmlToOpenSearchMapper {
     // visible elements
     validateNotNull(judgment.getHeader(), "Header missing");
 
-    JaxbHtml header = judgment.getHeader();
+    JaxbHtml header = judgment.getHeader().findShortTitle();
 
     validateNotNull(judgment.getJudgmentBody(), "JudgmentBody missing");
 
@@ -110,9 +109,19 @@ public class CaseLawLdmlToOpenSearchMapper {
             .map(note -> note.getContent())
             .orElse(null);
 
+    List<String> decisionNames =
+        docShortTexts
+            .map(DocumentaryShortTexts::getDecisionNames)
+            .orElse(Collections.emptyList())
+            .stream()
+            .map(DocumentaryShortTexts.DecisionName::getName)
+            .toList();
+
     JaxbHtml background = judgmentBody.getBackground();
 
     JaxbHtml decision = judgmentBody.getDecision();
+
+    // TODO
     JaxbHtml dissentingOpinion = null;
 
     JaxbHtml decisionGrounds =
@@ -120,14 +129,24 @@ public class CaseLawLdmlToOpenSearchMapper {
     JaxbHtml grounds = judgmentBody.getMotivationEntryContentByName("Gründe").orElse(null);
     JaxbHtml otherLongText =
         judgmentBody.getMotivationEntryContentByName("Sonstiger Langtext").orElse(null);
+
     List<String> previousDecisions =
-        nullSafeGet(
-            risMeta.getPreviousDecision(),
-            e -> e.stream().map(this::relatedDecisionToString).toList());
+        Optional.ofNullable(meta.getAnalysis())
+            .map(Analysis::getOtherReferences)
+            .map(refs -> refs.getReferencesByType(ImplicitReference::getPrecedingJudgement))
+            .map(
+                legalProceedings ->
+                    legalProceedings.stream().map(lp -> lp.asString()).collect(Collectors.toList()))
+            .orElse(Collections.emptyList());
+
     List<String> ensuingDecisions =
-        nullSafeGet(
-            risMeta.getEnsuingDecision(),
-            e -> e.stream().map(this::relatedDecisionToString).toList());
+        Optional.ofNullable(meta.getAnalysis())
+            .map(Analysis::getOtherReferences)
+            .map(refs -> refs.getReferencesByType(ImplicitReference::getEnsuingJudgement))
+            .map(
+                legalProceedings ->
+                    legalProceedings.stream().map(lp -> lp.asString()).collect(Collectors.toList()))
+            .orElse(Collections.emptyList());
 
     // some fields not in ldml are commented for now
     return CaseLawDocumentationUnit.builder()
@@ -148,7 +167,7 @@ public class CaseLawLdmlToOpenSearchMapper {
                 e ->
                     nullSafeGet(
                         e.getKeyword(), f -> f.stream().map(AknKeyword::getValue).toList())))
-        .decisionName(risMeta.getDecisionName())
+        .decisionName(decisionNames)
         .deviatingDocumentNumber(risMeta.getDeviatingDocumentNumber())
         .publicationStatus(risMeta.getPublicationStatus())
         .error(risMeta.getError() == null || risMeta.getError())
@@ -201,14 +220,5 @@ public class CaseLawLdmlToOpenSearchMapper {
     } catch (DescriptorException | DataBindingException | ValidationException e) {
       throw new OpenSearchMapperException("unable to parse file to DocumentationUnit", e);
     }
-  }
-
-  private String relatedDecisionToString(RelatedDecision relatedDecision) {
-    return Stream.of(
-            relatedDecision.getDocumentNumber(),
-            relatedDecision.getFileNumber(),
-            relatedDecision.getCourtType())
-        .filter(Objects::nonNull)
-        .collect(Collectors.joining(" "));
   }
 }
